# numaflow-js

./: .gitignore  .npmignore  .prettierignore  .prettierrc  CONTRIBUTING.md  Cargo.toml  README.md  binding.d.ts  binding.js  docs-theme.css  eslint.config.mjs  hierarchy.html  index.d.ts  index.html  index.js  index.ts  modules.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.index.json  tsconfig.json  typedoc.json  vitest.config.ts
.github/: CODEOWNERS
.github/workflows/: CI.yml
.husky/: pre-commit  pre-push
__test__/: accumulator-server.spec.ts  batch-map-server.spec.ts  map-server.spec.ts  mapstream-server.spec.ts  sink-integration.spec.ts  source-transform.spec.ts
assets/: highlight.css  navigation.js  search.js
classes/: accumulator.AsyncServer.html  accumulator.Message.html  batchmap.AsyncServer.html  batchmap.Response.html  batchmap.Responses.html  map.AsyncServer.html  map.Message.html  mapstream.AsyncServer.html  mapstream.Message.html  reduce.AsyncServer.html  reduce.Message.html  reduceStream.AsyncServer.html  reduceStream.Message.html  sessionReduce.AsyncServer.html  sessionReduce.Message.html  sink.AsyncServer.html  sink.Message.html  sink.Response.html  sink.Responses.html  source.AsyncServer.html  source.Message.html  sourceTransform.AsyncServer.html  sourceTransform.Datum.html  sourceTransform.Message.html
examples/accumulator/: Dockerfile  Makefile  README.md  simple-accumulator.yaml  stream-sorter.ts
examples/batchmap/: Dockerfile  Makefile  README.md  batch-map.ts  simple-batchmap.yaml
examples/mapper/: Dockerfile  Makefile  README.md  (+3 more)
interfaces/: accumulator.Datum.html  accumulator.MessageOptions.html  batchmap.BatchMessageOptions.html  batchmap.Datum.html  batchmap.Message.html  map.Datum.html  map.MessageOptions.html  map.SystemMetadata.html  map.UserMetadata.html  mapstream.Datum.html  mapstream.MessageOptions.html  reduce.Datum.html  reduce.IntervalWindow.html  reduce.MessageOptions.html  reduce.Metadata.html  reduceStream.Datum.html  reduceStream.IntervalWindow.html  reduceStream.MessageOptions.html  reduceStream.Metadata.html  sessionReduce.Datum.html  sessionReduce.MessageOptions.html  sessionReduce.SessionReducer.html  sink.Datum.html  sink.SystemMetadata.html  sink.UserMetadata.html  source.Offset.html  source.ReadRequest.html  source.Sourcer.html  source.UserMetadata.html  sourceTransform.MessageOptions.html  sourceTransform.SystemMetadata.html  sourceTransform.UserMetadata.html
modules/: accumulator.html  batchmap.html  map.html  mapstream.html  reduce.html  reduceStream.html  sessionReduce.html  sink.html  source.html  sourceTransform.html
proto/: sink.proto  sourcetransformer.proto
src/: accumulator.rs  batchmap.rs  index.ts  lib.rs  map.rs  mapstream.rs  reduce.rs  reducestream.rs  session_reduce.rs  sideinput.rs  sink.rs  source.rs  source_transform.rs
tests/: Cargo.toml
tests/__test__/: accumulator-server.spec.ts  batch-map-server.spec.ts  map-server.spec.ts  mapstream-server.spec.ts  reduce-server.spec.ts  reducestream-server.spec.ts  session-reduce.spec.ts  setup.ts  sideinput-server.spec.ts  sink-integration.spec.ts  source-server.spec.ts  source-transform.spec.ts  tsconfig.json
tests/src/: batchmap.rs  lib.rs  map.rs  mapstream.rs  reduce.rs  session_reduce.rs  sideinput.rs  sink.rs  source_transform.rs
types/: batchmap.BatchMapCallback.html  mapstream.MapStreamCallback.html  reduce.Callback.html  reduceStream.CallbackFn.html  sessionReduce.AccumulatorFnCallback.html  sessionReduce.MergeAccumulatorFnCallback.html  sessionReduce.SessionReduceFnCallback.html  sink.SinkCallback.html
variables/: map.UserMetadata.html  source.UserMetadata.html  sourceTransform.UserMetadata.html
(+110 files in other folders)
