[package]
name = "tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "map"
path = "src/map.rs"

[[bin]]
name = "mapstream"
path = "src/mapstream.rs"

[[bin]]
name = "sink"
path = "src/sink.rs"

[[bin]]
name = "batchmap"
path = "src/batchmap.rs"

[[bin]]
name = "source_transform"
path = "src/source_transform.rs"

[[bin]]
name = "accumulator"
path = "src/accumulator.rs"

[[bin]]
name = "reduce"
path = "src/reduce.rs"

[[bin]]
name = "session_reduce"
path = "src/session_reduce.rs"

[dependencies]
numaflow.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
hyper-util.workspace = true
prost-types.workspace = true
tokio-stream.workspace = true
